# cao-sim

./: .dockerignore  .env  .gitignore  Cargo.toml  Makefile  README.md  build.sh  docker-compose.yaml  dockerfile  dockerfile.release  example.env
.github/workflows/: rust.yml
bash-scripts/: build.sh  release.sh  run.sh
cao-storage-derive/src/: lib.rs
migrations/2020-11-01-151145_initial/: down.sql  up.sql
migrations/2020-11-02-190602_create_schema/: down.sql  up.sql
migrations/2020-11-04-011047_add_world_output/: down.sql  up.sql
migrations/2020-11-04-015252_fix_world/: down.sql  up.sql
simulation/: Cargo.toml  build.rs  sqlx-data.json
simulation/benches/: btree_table.rs  morton_table.rs  table_join.rs  vec_table.rs
simulation/cpnp/: job.capnp
simulation/examples/: mp_executor.rs  program.json
simulation/src/: components.rs  data_store.rs  indices.rs  lib.rs  map_generation.rs  pathfinding.rs  prelude.rs  scripting_api.rs  terrain.rs  utils.rs  world.rs
simulation/src/api/: bots.rs  find_api.rs  mod.rs  resources.rs  structures.rs
simulation/src/components/: bot_components.rs  game_config.rs  mod.rs  resources.rs  rooms.rs
simulation/src/executor/: mod.rs  mp_executor.rs
simulation/src/executor/mp_executor/: drone.rs  error.rs  execute.rs  mod.rs  primary.rs  queen.rs  world_state.rs
simulation/src/geometry/: mod.rs  point.rs
simulation/src/intents/: dropoff_intent.rs  log_intent.rs  mine_intent.rs  mod.rs  move_intent.rs  pathcache_intent.rs  room_transit_intent.rs  script_history_intent.rs  spawn_intent.rs
simulation/src/map_generation/: chunk_test_map.json  diamond_square.rs  mod.rs  overworld.rs
simulation/src/map_generation/overworld/: mod.rs  params.rs
simulation/src/map_generation/room/: chunk_test_map.json  diamond_square.rs  mod.rs  params.rs
simulation/src/model/: indices.rs  mod.rs  pathfinding.rs  terrain.rs
simulation/src/model/components/: mod.rs  resources.rs  rooms.rs
simulation/src/model/geometry/: mod.rs  point.rs  point3.rs
simulation/src/scripting_api/: bots.rs  find_api.rs  mod.rs  structures.rs
simulation/src/storage/: macros.rs  mod.rs  views.rs
simulation/src/storage/views/: logging.rs  mod.rs  unsafe_view.rs  unwrap.rs  unwrap_mut.rs  view.rs  world_logger.rs
simulation/src/systems/: attack_system.rs  death_system.rs  decay_system.rs  dropoff_intent_system.rs  energy_system.rs  log_intent_system.rs  log_system.rs  mine_intent_system.rs  mineral_system.rs  mod.rs  move_intent_system.rs  path_cache_intent_system.rs  positions_system.rs  script_execution.rs  script_history_system.rs  spawn_intent_system.rs  spawn_system.rs
simulation/src/systems/intent_system/: dropoff_intent_system.rs  log_intent_system.rs  mine_intent_system.rs  mod.rs  move_intent_system.rs  path_cache_intent_system.rs  room_transit_intent_system.rs  spawn_intent_system.rs
simulation/src/systems/spawn_system/: continous_spawn_system.rs  mod.rs  spawn_intent_system.rs  spawn_system.rs
simulation/src/tables/: btree.rs  flag.rs  mod.rs  morton.rs  morton_hierarchy.rs  traits.rs  unique.rs  vector.rs
simulation/src/tables/dense/: mod.rs  serde.rs
simulation/src/tables/morton/: find_key_partition.rs  litmax_bigmin.rs  mod.rs  morton_key.rs  serde.rs  skiplist.rs  sorting.rs  tests.rs
simulation/src/tables/vector/: mod.rs  serde.rs
simulation/src/world/: json_impl.rs
test-env/: Cargo.toml  Makefile  README.md
test-env/src/: lib.rs  utils.rs
test-env/www/: index.html  index.js  package-lock.json  package.json
worker/: .env  Cargo.toml  build.sh  dockerfile  run-profile.sh  sqlx-data.json
worker/src/: config.rs  init.rs  input.rs  main.rs  output.rs
worker/src/input/: mod.rs  rooms.rs  script_update.rs  structures.rs
worker/src/programs/: center_walking_program.json  mining_program.json
