[package]
name = "test-env"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
caolo-sim = { path = "../simulation", features=["disable-parallelism"], default-features=false }
cao-math = { git = "https://github.com/caolo-game/cao-math.git", default-features=false }
rand = { version= "0.7", features=["small_rng", "wasm-bindgen"] }
console_log = { version = "0.2" }
log = "*"
slog = "*"
slog-stdlog = "*"
slog-term = "*"
slog-scope = "*"

wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.1"
console_error_panic_hook = { version = "0.1.1" }

[dev-dependencies]
wasm-bindgen-test = "0.2"
