[package]
name = "caolo-worker"
version = "0.1.0"
authors = ["Daniel Kiss <littlesnorrboy@gmail.com>"]
edition = "2018"

[[bin]]
name = "caolo-worker"
path = "src/main.rs"
required-features = []

[features]
default = ["dotenv"]
dotenv = ["dep-dotenv"]

[dependencies]
caolo-sim = { path="../simulation" } # , features=["cao-profile"] }
cao-lang = { git = "https://github.com/caolo-game/cao-lang.git" }
cao-messages = { git = "https://github.com/caolo-game/cao-messages.git" }

jemallocator = { version="0.3", optional=true }
slog = { version="2", features=["max_level_trace", "release_max_level_info"] }
slog-async = "*"
slog-term = "*"
slog-envlogger = "*"
chrono = { version="0.4", features=["serde"] }
serde_json = "1"
serde = "1"
serde_derive = "1"
redis = "0.15"
rand="*"
sentry = "0.19"
anyhow = "1"
thiserror = "1"
sqlx = { version="0.3", features=["postgres", "chrono", "uuid", "json", "tls"] }
async-std = { version = "1.4.0", features = [ "attributes","tokio02" ] }

dep-dotenv = { version="0.14", optional=true, package="dotenv" }
uuid = { version="0.8", features=["v4"] }
capnp="0.13"

[dev-dependencies]
env_logger = { version="*", default-features=false }

[profile.release]
lto=true
